# conways-game-of-life

./: .gitignore  CMakeLists.txt  README.md  run.sh
include/: Conway.hpp  ConwayGrid.hpp  Grid.hpp
src/: Conway.cpp  main.cpp
